# LoQuRo

./: .gitignore  README.md
Mechanics/: base_dog.stl  carcasa_final.stl  hombrera_encoders.stl  hombro_pierna.stl  hombro_pierna_mir.stl  iman_femur.stl  iman_tibia.stl  imanes_ejes_base.stl  molde_esfera_p1.stl  molde_esfera_p2.stl  pared_cojinete.stl  pared_cojinete_mir.stl  parte_trasera_encoders.stl  pieza1_pierna_left.stl  pieza1_pierna_left_mir.stl  pieza2_pierna_left.stl  pieza2_pierna_left_mir.stl  pieza3_pierna_left.stl  pieza3_pierna_left_mir.stl  pieza4_pierna_left.stl  pieza4_pierna_left_mir.stl  protector_encoders.stl  sujetador_iman_femur.stl  sujetador_iman_tibia.stl
Software/control/: README.md
Software/control/scripts/: LoQuRo_greeting.py  LoQuRo_squats.py  LoQuRo_walk.py
Software/control/src/loquro_lab/: README.md  play.py  pyproject.toml
Software/control/src/loquro_lab/loquro_lab/: __init__.py  env_cfgs.py  quad_bot_constants.py  rl_cfg.py
Software/control/src/loquro_lab/loquro_lab/xmls/: MUJOCO_LOG.TXT  loquro.xml
Software/control/src/loquro_lab/loquro_lab/xmls/assets/: base_dog_correct_con_p_trasera.stl  hombro_pierna_correct_encoders.stl  hombro_pierna_correct_r_encoders.stl
Software/firmware/embedded-leg-ctrl/: .gitignore  GEMINI.md  README.md  platformio.ini
Software/firmware/embedded-leg-ctrl/include/: PCA9685.h  README  ServoCtrl.h  hardware.h
Software/firmware/embedded-leg-ctrl/src/: hardware.cpp  main.cpp  tasks.cpp  utilities.cpp  zenoh.cpp
Software/firmware/embedded-leg-ctrl/test/: TCA9548A.cpp
docs/: index.html
(+4 files in other folders)
